# sales-trades-backend-service

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 51283a028465_add_pipeline_view_id.py  755cca72bb41_add_lead_scoring_and_triage.py  9ee53e33097f_baseline_schema.py  a1b2c3d4e5f6_add_must_change_password.py  a1c4e8f2d5b7_add_trade_documents.py  ad205b8f1f36_add_deal_created_at_lost_reason_and_.py  b2c3d4e5f6a7_remap_dashboard_roles.py  b8f4d2a6c1e3_add_room_metadata.py  bbb90d835871_add_email_events_tracking.py  c1d2e3f4a5b6_add_campaigns_and_leads.py  c4e7a1b9d2f3_add_analytics_indexes.py  c4f1a2b3d5e6_add_contact_activity.py  d5f1a9c3b7e2_add_deal_reasons.py  d7e9f1a2b3c4_add_lead_pack_delivery.py  e3f5a7c9b1d2_add_trade_programs_and_leads.py  e7c2a4f9b6d1_add_rooms_and_bookings.py  f33926afc37b_add_hashed_password_to_dashboard_users.py
app/: main.py
app/api/: dependencies.py
app/core/: config.py  database.py  logging.py  scheduler.py  security.py
app/freshsales/: client.py  endpoints.py  (+1 more)
docs/: export-launchpad-integration.md
scripts/: assign_owners.py  backfill_engagement_scores.py  backfill_icp_crm_fields.py  backfill_nog_crm_fields.py  cleanup_trade_test_data.py  enrich_leads.py  import_rep_leads.py  import_trade_leads.py  run.sh  score_leads_icp.py  seed_campaigns.py  seed_rooms.py  seed_trade_programs.py  seed_user.py  send_nog_reconnect.py  transfer_export_launchpad.py
tests/: conftest.py
(+116 files in other folders)
