[project]
name = "churchgate-dashboard-backend"
version = "0.1.0"
description = "WTC Abuja / Churchgate Dashboard backend - Freshsales ingestion + aggregation API"
authors = [
    { name = "lyon-zas", email = "eyimofeokikiola@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "apscheduler>=3.10.4",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "asyncer>=0.0.8",
    "bcrypt>=4.0.0",
    "pyjwt>=2.10.0",
    "structlog>=24.4.0",
    "greenlet>=3.5.1",
    "google-analytics-data>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a1",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
